@startuml

title __Top-Level Diagram__\n


    class AMCInfo {
        {static} - log : Logger
        + AMCInfo()
    }

  


    class ControlUnit {
        ~ AMCPanel : JPanel
        ~ f : JFrame
        ~ incomingPanel : JPanel
        ~ longStayPanel : JPanel
        ~ mainPanel : JPanel
        {static} - log : Logger
        + ControlUnit()
        + labelPadding()
        + outline()
        + panelPadding()
    }

  


    class DisTransPage {
        {static} - log : Logger
        + DisTransPage()
    }

  


    class GUI {
        ~ backButton : JButton
        ~ refreshButton : JButton
        ~ wardId : int
        {static} - log : Logger
        + GUI()
    }

  


    class Incoming {
        {static} - log : Logger
        + Incoming()
    }


    class LongStay {
        {static} - log : Logger
        + LongStay()
    }

  

    class Main {
        {static} + main()
    }

  


    class PatientForm {
        {static} - log : Logger
        + PatientForm()
        {static} + isNumeric()
    }

  


    class UserPage {
        {static} ~ gc : GraphicsConfiguration
        {static} - log : Logger
        + UserPage()
    }

  

  ControlUnit o-- Methods.ControlCentre
  DisTransPage o-- Methods.GeneralWard
  DisTransPage o-- CUTablePanels.DisTransTablePanel
  DisTransPage o-- Methods.AMCWard
  GUI o-- Methods.AMCWard
  GUI o-- Methods.LongstayWard


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
